Se agrego la seccion portafolio con css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="img/logo4.png">
     <link rel="icon" type="image/png" sizes="96x96" href="img/logo4.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/logo4.png">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="img/icons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -172,6 +172,43 @@
                     </div>
                 </div>
             </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Seccion Portafolio -->
+    <section id="portafolio" class="portafolio">
+        <div class="contenido-section">
+            <h2>Portafolio</h2>
+            <div class="galeria">
+                <div class="proyecto">
+                    <img src="img/j2.jpeg" alt="">
+                    <div class="overlay">
+                        <h3>Proyecto 1</h3>
+                        <p>Fotografia</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/j3.jpeg" alt="">
+                    <div class="overlay">
+                        <h3>Proyecto 2</h3>
+                        <p>Fotografia</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/j2.jpeg" alt="">
+                    <div class="overlay">
+                        <h3>Proyecto 3</h3>
+                        <p>Fotografia</p>
+                    </div>
+                </div>
+                <div class="proyecto">
+                    <img src="img/j3.jpeg" alt="">
+                    <div class="overlay">
+                        <h3>Proyecto 4</h3>
+                        <p>Fotografia</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
