--- a/index.html
+++ b/index.html
@@ -233,5 +233,17 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <a href="#inicio" id="inicio" class="arriba">
+            <i class="fa-solid fa-angles-up"></i>
+        </a>
+        <div class="redes">
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
