se agrego el js responsive y arreglos css responsive

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#sobremi">Sobre mi</a></li>
-                    <li><a href="#Skills">Skills</a></li>
-                    <li><a href="#curriculum">Curriculum</a></li>
-                    <li><a href="#portafolio">Portafolio</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#inicio" onclick="seleccionar()">Inicio</a></li>
+                    <li><a href="#sobremi" onclick="seleccionar()">Sobre mi</a></li>
+                    <li><a href="#Skills" onclick="seleccionar()">Skills</a></li>
+                    <li><a href="#curriculum" onclick="seleccionar()">Curriculum</a></li>
+                    <li><a href="#portafolio" onclick="seleccionar()">Portafolio</a></li>
+                    <li><a href="#contacto" onclick="seleccionar()">Contacto</a></li>
                 </ul>
             </nav>
-            <div class="nav-responsive">
+            <div class="nav-responsive" onclick="mostrarOcultarMenu()">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
@@ -59,7 +59,7 @@
             <h1>Lenny Servino</h1>
             <h2>Técnico en Ingenieria de Software</h2>
             <div class="redes">
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/lenny-servino-21430922a/" rel="noopener nofollow" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
             </div>
@@ -87,7 +87,7 @@
                         </li>
                         <li>
                             <strong>Email</strong>
-                            LS_Software@gmail.com
+                            ls.softweb@gmail.com
                         </li>
                         <li>
                             <strong>Lugar de residencia</strong>
@@ -184,29 +184,29 @@
                 <div class="proyecto">
                     <img src="img/j2.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Proyecto 1</h3>
-                        <p>Fotografia</p>
+                        <h3>Próximamente</h3>
+                        <p>Work in progress</p>
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="img/j3.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Proyecto 2</h3>
-                        <p>Fotografia</p>
+                        <h3>Próximamente</h3>
+                        <p>Work in progress</p>
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="img/j2.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Proyecto 3</h3>
-                        <p>Fotografia</p>
+                        <h3>Próximamente</h3>
+                        <p>Work in progress</p>
                     </div>
                 </div>
                 <div class="proyecto">
                     <img src="img/j3.jpeg" alt="">
                     <div class="overlay">
-                        <h3>Proyecto 4</h3>
-                        <p>Fotografia</p>
+                        <h3>Próximamente</h3>
+                        <p>Work in progress</p>
                     </div>
                 </div>
             </div>
@@ -240,10 +240,12 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/lenny-servino-21430922a/" rel="noopener nofollow" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
         </div>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
