Agregado info sobre mi y arreglo css

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-section">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Lenny Servino.</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum eveniet corrupti aspernatur ratione atque unde voluptatum fugit, obcaecati quod corporis sed omnis architecto reprehenderit debitis placeat voluptates sit praesentium repellendus!</p>
+            <p>Hola,soy<span> Lenny Servino</span>. Soy desarrollador Full Stack, mi principal area de trabajo es el desarrollo web con PHP, MySQL, CSS3 y JavaScript. En la búsqueda de ampliar los conocimientos y habilidades de desarrollo con antiguas y nuevas tecnologías, para mejorar la calidad de servicios y mantenimientos ofrecidos.</p>
 
             <div class="fila">
                 <!-- Datos personales -->
