Modificando datos personales y agregando CV

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2>Técnico en Ingenieria de Software</h2>
             <div class="redes">
                 <a href="https://www.linkedin.com/in/lenny-servino-21430922a/" rel="noopener nofollow" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/LennyServino" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
             </div>
         </div>
@@ -79,11 +79,7 @@
                     <ul>
                         <li>
                             <strong>Edad</strong>
-                            22 años.
-                        </li>
-                        <li>
-                            <strong>Teléfono</strong>
-                            0000-0000
+                            24 años.
                         </li>
                         <li>
                             <strong>Email</strong>
@@ -123,10 +119,12 @@
                     </div>
                 </div>
             </div>
-            <button>
-                Descargar CV <i class="fa-solid fa-download"></i>
-                <span class="overlay"></span>
-            </button>
+            <a href="https://drive.google.com/file/d/1xGIkrPhhKxc6zBHhyNzQT6DFqZLvSHBw/view?usp=sharing" target="_blank" rel="noopener noreferrer">
+                <button>
+                    Descargar CV <i class="fa-solid fa-download"></i>
+                    <span class="overlay"></span>
+                </button>
+            </a>
         </div>
     </section>
 
