actualizando portafolio y arreglando estilos

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                     <li><a href="#inicio">Inicio</a></li>
                     <li><a href="#sobremi">Sobre mi</a></li>
                     <li><a href="#Skills">Skills</a></li>
-                    <li><a href="#curriculum">Curriculum</a></li>
                     <li><a href="#portafolio">Portafolio</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
@@ -54,14 +53,20 @@
     <section id="inicio" class="inicio">
         <div class="contenedor-banner">
             <div class="contenedor-img">
-                <img src="img/usuario.png" alt="">
+                <img src="img/Foto_CV_(compress).jpg" alt="">
             </div>
             <h1>Lenny Servino</h1>
-            <h2>Técnico en Ingenieria de Software</h2>
+            <h2>Full Stack Developer</h2>
             <div class="redes">
-                <a href="https://www.linkedin.com/in/lenny-servino-21430922a/" rel="noopener nofollow" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://github.com/LennyServino" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/lenny-servino/" rel="noopener nofollow" target="_blank">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+                <a href="https://github.com/LennyServino" target="_blank">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="mailto:ls.softweb@gmail.com ">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
             </div>
         </div>
     </section>
@@ -70,7 +75,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-section">
             <h2>Sobre Mí</h2>
-            <p>Hola,soy<span> Lenny Servino</span>. Soy desarrollador Full Stack, mi principal area de trabajo es el desarrollo web con PHP, MySQL, CSS3 y JavaScript. En la búsqueda de ampliar los conocimientos y habilidades de desarrollo con antiguas y nuevas tecnologías, para mejorar la calidad de servicios y mantenimientos ofrecidos.</p>
+            <p>Hola,soy<span> Lenny Servino</span>. Soy un desarrollador fullstack apasionado y comprometido, con experiencia en el desarrollo de aplicaciones web y sistemas web. Mi objetivo a largo plazo es seguir aprendiendo y creciendo como desarrollador fullstack, destacando tanto en el backend como en el frontend. Siempre ampliando los conocimientos y habilidades de desarrollo con antiguas y nuevas tecnologías, para mejorar la calidad de servicios y mantenimientos ofrecidos.</p>
 
             <div class="fila">
                 <!-- Datos personales -->
@@ -91,7 +96,7 @@
                         </li>
                         <li>
                             <strong>Cargo</strong>
-                            <span>Freelance</span>
+                            <span>Full Stack Developer</span>
                         </li>
                     </ul>
                 </div>
@@ -119,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            <a href="https://drive.google.com/file/d/1xGIkrPhhKxc6zBHhyNzQT6DFqZLvSHBw/view?usp=sharing" target="_blank" rel="noopener noreferrer">
+            <a href="https://drive.google.com/file/d/1M6Po_sVHiCsGywSmP9Gsx7kqSaQsZuVA/view?usp=sharing" target="_blank" rel="noopener noreferrer">
                 <button>
                     Descargar CV <i class="fa-solid fa-download"></i>
                     <span class="overlay"></span>
@@ -180,31 +185,57 @@
             <h2>Portafolio</h2>
             <div class="galeria">
                 <div class="proyecto">
-                    <img src="img/j2.jpeg" alt="">
+                    <img src="https://res.cloudinary.com/ddnkevlzw/image/upload/v1727562568/yankui_jraxa8.png" alt="Yankui website">
                     <div class="overlay">
-                        <h3>Próximamente</h3>
-                        <p>Work in progress</p>
+                        <h3>Yankui</h3>
+                        <p>WordPress / Elementor</p>
+                        <div class="enlaces">
+                            <a href="https://yankui.infinityfreeapp.com/" target="_blank" class="btn">
+                                <i class="fa-solid fa-globe"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/j3.jpeg" alt="">
+                    <img src="https://res.cloudinary.com/ddnkevlzw/image/upload/v1727568692/quizz-app2_iyiptn.png" alt="Frontend quiz app">
                     <div class="overlay">
-                        <h3>Próximamente</h3>
-                        <p>Work in progress</p>
+                        <h3>Quiz App</h3>
+                        <p>Vite / JavaScript / HTML</p>
+                        <div class="enlaces">
+                            <a href="https://quizz-app-grupo4.netlify.app/" target="_blank" class="btn">
+                                <i class="fa-solid fa-globe"></i>
+                            </a>
+                            <a href="https://github.com/LennyServino/frontend-quiz-app" target="_blank" class="btn">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/j2.jpeg" alt="">
+                    <img src="https://res.cloudinary.com/ddnkevlzw/image/upload/v1727567882/Proyecto_G_nius_zeqnxl.jpg" alt="Proyecto G'nius UTEC">
                     <div class="overlay">
-                        <h3>Próximamente</h3>
-                        <p>Work in progress</p>
+                        <h3>Proyecto G´nius</h3>
+                        <p>PHP / JavaScript / MySQL / Bootstrap</p>
+                        <div class="enlaces">
+                            <a href="https://github.com/LennyServino/Proyecto-GNIUS" target="_blank" class="btn">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="proyecto">
-                    <img src="img/j3.jpeg" alt="">
+                    <img src="https://res.cloudinary.com/ddnkevlzw/image/upload/v1727568831/dragonball-api_fdy4nv.png" alt="Proyecto Dragon Ball API">
                     <div class="overlay">
-                        <h3>Próximamente</h3>
-                        <p>Work in progress</p>
+                        <h3>Dragon Ball API APP</h3>
+                        <p>Vite / JavaScript / HTML</p>
+                        <div class="enlaces">
+                            <a href="https://practica-dragonball-api-ls.netlify.app/" target="_blank" class="btn">
+                                <i class="fa-solid fa-globe"></i>
+                            </a>
+                            <a href="https://github.com/LennyServino/dragonball-api-app" target="_blank" class="btn">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -238,9 +269,15 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="https://www.linkedin.com/in/lenny-servino-21430922a/" rel="noopener nofollow" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/lenny-servino/" rel="noopener nofollow" target="_blank">
+                <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+            <a href="https://github.com/LennyServino" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="mailto:ls.softweb@gmail.com ">
+                <i class="fa-solid fa-envelope"></i>
+            </a>
         </div>
     </footer>
 
